# real-time-DDoS-detection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: main.py
src/Flow/: flow.py
tests/: gui_test.py  ml_test.py  sample_test.py  savelogs_test.py  sniffer_test.py
utils/: __init__.py
utils/App/: MainWindow.py  StdoutRedirector.py  ThreadWorker.py
utils/Flow/: flow.py  flowFeature.py  packetInfo.py
utils/LSTM/: lstm.py
utils/Sniffer/: model.py  sniffer.py
