[tool.poetry]
name = "real-time-ddos-detection"
version = "0.1.0"
description = ""
authors = ["patauch <denchicl123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scapy = "^2.5.0"
lightning = "^2.2.2"
scikit-learn = "^1.4.2"
pyqt6 = "^6.6.1"
pytest-qt = "^4.4.0"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
